<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    tools:context="com.dev.dany.skillz.JobPostActivity$PlaceholderFragment"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:id="@+id/user_detail_name_textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toRightOf="@+id/user_detail_name_textView2"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/user_detail_name_textView2"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/user_detail_name_textView"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/email"
            android:id="@+id/user_detail_email_textView"
            android:layout_below="@+id/user_detail_name_textView2"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_marginTop="16dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/user_detail_email_textView2"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:layout_below="@+id/user_detail_email_textView"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/user_detail_address_textView"
            android:layout_below="@+id/user_detail_email_textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:text="@string/address"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/user_detail_address_editText"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:layout_below="@+id/user_detail_address_textView"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/skills"
            android:id="@+id/user_detail_skill_textView"
            android:layout_below="@+id/user_detail_address_editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toRightOf="@+id/user_detail_skill_spinner"
            android:layout_marginTop="16dp"
            android:textStyle="bold"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_detail_skill_spinner"
            android:layout_below="@+id/user_detail_skill_textView"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/self_description"
            android:id="@+id/user_detail_dsc_textView"
            android:layout_below="@+id/user_detail_skill_spinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toRightOf="@+id/user_detail_dsc_editText"
            android:layout_marginTop="16dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/user_detail_dsc_editText"
            android:layout_below="@+id/user_detail_dsc_textView"
            android:layout_marginTop="16dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:id="@+id/user_detail_button"
            android:layout_below="@+id/user_detail_dsc_editText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            style="@android:style/Widget.Button"/>

    </RelativeLayout>
</ScrollView>
