<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    tools:context="com.dev.dany.skillz.JobPostActivity$PlaceholderFragment"
    android:fillViewport="true">
    <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            android:id="@+id/jobPost_title_textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/jobPost_title_editText"
            android:layout_below="@+id/jobPost_title_textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_desc"
            android:id="@+id/jobPost_desc_textView"
            android:layout_below="@+id/jobPost_title_editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/jobPost_desc_editText"
            android:layout_below="@+id/jobPost_desc_textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/jobPost_title_editText"
            android:layout_alignEnd="@+id/jobPost_title_editText"
            android:layout_marginTop="16dp"/>

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/req_skill"
            android:id="@+id/jobPost_skill_textView"
            android:textStyle="bold"
            android:layout_below="@+id/jobPost_desc_editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/jobPost_spinner"
            android:layout_below="@+id/jobPost_skill_textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:id="@+id/jobPost_button"
            style="@android:style/Widget.Button"
            android:layout_below="@+id/jobPost_spinner"
            android:layout_alignRight="@+id/jobPost_spinner"
            android:layout_alignEnd="@+id/jobPost_spinner"/>

    </RelativeLayout>
</ScrollView>
